Fix z-index

--- a/static/style.css
+++ b/static/style.css
@@ -59,6 +59,7 @@ button {
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     display: inline-block;
+    z-index: 200;
 }
 .note {
     padding: 10px;
